Closed Bug 1642809 Opened 4 years ago Closed 4 years ago

CID 1463999: Incorrect expression (PW.ASSIGN_WHERE_COMPARE_MEANT)

Categories

(NSS :: Libraries, defect)

defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Sylvestre, Assigned: Sylvestre)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

NSS complains about this change:
https://hg.mozilla.org/projects/nss/rev/a2293e897889027856a26404ced424f09ecb2130#l25.779

I guess we wanted a "==" here. if not, changes in variable should not be done in assert.

Attachment #9153651 - Attachment description: Bug 1642809 - Fix an assert (we need a comparison, not assignement) r?kjacobs → Bug 1642809 - Fix an assert (we need a comparison, not assignment) r?kjacobs
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.53
Target Milestone: 3.53 → 3.54
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: