Bug 1642809 - Fix an assert (we need a comparison, not assignment) r=kjacobs

Differential Revision: https://phabricator.services.mozilla.com/D77950